# sabi-voice-learning

./: .env.example  .gitignore  Dockerfile  MODEL_LICENSES.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/core/: config.py  security.py
app/providers/: base.py  factory.py  kokoro_onnx.py  stub.py
docs/: implementation-plan.md  open-source-tts-engine-plan.md  yarn-gpt-research-and-open-source-strategy.md
scripts/: docker-entrypoint.sh  download-kokoro-models.sh
tests/: test_health.py
