[project]
name = "sabi-voice-service"
version = "0.1.0"
description = "Open-source local voice generation backend for Sabi Voice Learning."
requires-python = ">=3.10,<3.13"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
